themes/digital.gov/src/scss/new/guides/_guide-menu-bar.scss
@use "uswds-core" as *;

.dg-guide__menu-bar {
  @include u-border-y("1px", "gray-cool-30", "solid");
  @include u-z(200);
  align-items: center;
  background-color: color("gray-10");
  display: flex;
  height: units(10);
  justify-content: center;
  position: sticky;
  top: -1px;
  white-space: nowrap;

  &-image-container {
    flex-shrink: 0;
    margin: 0 units(3);

    a {
      text-decoration: none;
    }

    img {
      height: units(4);
    }
  }

  &-link {
    color: color("black");
    font-size: size("sans", "md");
    font-weight: font-weight("light");
    margin: 0 units(3);
    text-decoration: none;

    &:hover {
      border-bottom: units(0.5) color("primary") solid;
      color: color("black");
    }

    &:visited {
      color: color("black");
    }
  }

  &-links {
    // Fade out overflowing items when scrolling
    mask: linear-gradient(90deg, #0000, #000 5% 95%, #0000);
    overflow-x: scroll;
    overflow-y: hidden;
    padding: 0 units(3);
    scrollbar-width: none;
  }

  &-links::-webkit-scrollbar {
    display: none;
  }

  &.sticky {
    justify-content: space-evenly;

    .dg-guide__menu-bar-image-container {
      align-items: flex-end;
      display: flex;
    }
  }

  .dg-current {
    border-bottom: units(0.5) color("primary") solid;
    font-weight: font-weight("medium");
  }

  .dg-glossary__toggle {
    display: inline;

    &-icon {
      margin-left: units(1);
      // Set width explicitly for proper rendering on Safari browsers
      width: units(5);
    }
  }
}

.dg-accordion-mobile-menu {
  position: sticky;
  top: -1px;
  z-index: z-index(100);

  &__content {
    background-color: color("gray-3");
    box-shadow: 0px 12px 12px 2px rgba(0, 0, 0, 0.35);
    padding: 0;
  }

  &__heading {
    align-items: center;
    background-color: color("gray-cool-5");
    // Fixes flexbox width layout overflow
    display: grid;
    grid-template-columns: 1fr 3fr;
    height: units(7);

    svg {
      margin-top: units(1);
    }
  }

  &__image {
    display: flex;
    margin-right: units(4);
    &-icon {
      flex: 1 0 0;
      height: units(4);
      width: units(4);
    }
  }

  &__image-container {
    align-items: flex-end;
    display: flex;
    flex-direction: row;
    justify-content: right;
  }

  &__image-glossary {
    margin-right: units(1);
  }

  &__button {
    background-color: color("blue-warm-20v");
    flex: 1 0 0;
    height: 100%;
    text-align: left;

    &:focus {
      outline: none;
    }

    h4 {
      margin: 0;
      padding: 0;
    }
  }

  &__nav {
    &-list {
      display: flex;
      flex-direction: column;
      margin: 0;
      padding: units(2);
    }

    &-list-item {
      align-items: center;
      display: flex;
      height: units(6);
      list-style-type: none;
    }
  }

  &__link {
    color: color("black");
    font-size: font-size("sans", "md");
    font-weight: font-weight(400);
    margin: 0 units(1.5);
    text-decoration: none;

    &:hover {
      border-bottom: units(0.5) color("primary") solid;
      color: color("black");
    }

    &:visited {
      color: color("black");
    }

    &.dg-current {
      color: color("blue-warm-60v");
      font-weight: 700;
    }
  }
}

